feat: add deploy configs
